--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,3 +5,43 @@
 .owl-carousel .owl-item img {
     height: 400px !important;
 }
+
+.not-found-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    text-align: center;
+    background-color: #f8f9fa;
+  }
+  
+  .not-found-title {
+    font-size: 2rem;
+    color: #dc3545;
+    margin-bottom: 10px;
+  }
+  
+  .not-found-text {
+    font-size: 1.2rem;
+    color: #6c757d;
+    margin-bottom: 20px;
+  }
+  
+  .not-found-link {
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: #007bff;
+    padding: 10px 20px;
+    border: 2px solid #007bff;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  
+  .not-found-link:hover {
+    background-color: #007bff;
+    color: white;
+  }
+
+  
+  
